<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/TV_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="27dp"
        android:layout_marginTop="31dp"
        android:text="@string/login"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/TV_to_get_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TV_login"
        android:layout_marginStart="27dp"
        android:layout_marginTop="8dp"
        android:text="@string/login_to_get_started"
        android:textSize="14sp"
        android:textColor="@color/dark_gray"/>

    <TextView
        android:id="@+id/TV_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/TV_to_get_started"
        android:layout_marginHorizontal="27dp"
        android:layout_marginTop="49dp"
        android:layout_marginBottom="8dp"
        android:text="@string/email_address"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/ET_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="emailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TV_email"
        android:layout_marginHorizontal="27dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_edit_text"
        android:drawableStart="@drawable/ic_email"
        android:paddingHorizontal="13dp"
        android:drawablePadding="8dp"
        android:hint="@string/enter_email"
        android:textColorHint="@color/gray"
        android:inputType="textEmailAddress" />


<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/TIL_email"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="58dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/TV_email"-->
<!--        android:layout_marginHorizontal="27dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        app:hintEnabled="false"-->
<!--        app:endIconMode="password_toggle"-->
<!--        app:endIconTint="@color/gray">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:background="@drawable/shape_edit_text"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:drawableStart="@drawable/ic_password"-->
<!--            android:drawablePadding="8dp"-->
<!--            android:textSize="14sp"-->
<!--            android:hint="@string/enter_password"-->
<!--            tools:text=""-->
<!--            android:inputType="textPassword"/>-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

    <TextView
        android:id="@+id/TV_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ET_email"
        android:layout_marginEnd="27dp"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_password"
        android:textSize="14sp"
        android:textColor="@color/light_blue"/>

    <TextView
        android:id="@+id/TV_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ET_email"
        android:layout_marginHorizontal="27dp"
        android:layout_marginTop="49dp"
        android:text="@string/password"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/ET_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="27dp"
        app:layout_constraintTop_toBottomOf="@id/TV_password"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_edit_text"
        android:hint="@string/password"
        android:textColorHint="@color/dark_gray"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="8dp"
        android:paddingHorizontal="13dp"
        android:maxLength="15" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="27dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@drawable/selector_button_login"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ET_password"
        tools:ignore="DuplicateSpeakableTextCheck" />
    
    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="match_parent"
        android:layout_height="56dp"

        
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="27dp"
        android:text="@string/create_account"
        android:textSize="20sp"
        android:textColor="@color/blue"
        android:gravity="center"
        android:backgroundTint="@drawable/selector_button_create_account" />

</androidx.constraintlayout.widget.ConstraintLayout>